# Ameko

./: .editorconfig  .gitattributes  .gitmodules  Ameko.sln  Ameko.slnx  Directory.Build.props  Directory.Packages.props  crowdin.yml  readme.md
Ameko/: .editorconfig  Ameko.csproj  AmekoServiceProvider.cs  App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest
Ameko.Desktop/: Ameko.Desktop.csproj
Ameko.ViewModel.Tests/: Ameko.ViewModel.Tests.csproj  AutoNSubstituteDataAttribute.cs  DepCtrlWindowViewModelTests.cs  UnitTest1.cs
AssCS/: AssCS.csproj  BindableBase.cs  Block.cs  Color.cs  Document.cs  Event.cs  EventField.cs  EventManager.cs  ExtradataEntry.cs  ExtradataManager.cs  File.cs  GarbageEntry.cs  GarbageManager.cs  HistoryManager.cs  IEntry.cs  InfoManager.cs  Logger.cs  Margins.cs  Options.cs  ScriptInfoManager.cs  Style.cs  StyleField.cs  StyleManager.cs  Time.cs
Ffms2CS/: AudioSource.cs  Constants.cs  Crop.cs  External.cs  Ffms2.cs  Ffms2CS.csproj  Frame.cs  Index.cs  Indexer.cs  Track.cs  VideoSource.cs
Holo/: AVManager.cs  Configuration.cs  ConfigurationManager.cs  FileWrapper.cs  Frame.cs  FrameTimeType.cs  Frames.cs  Globals.cs  GlobalsManager.cs  Holo.csproj  HoloContext.cs  HoloScript.cs  IConfiguration.cs  IHoloContext.cs  IPlugin.cs  LoggerHelper.cs  MediaController.cs  PluginHandler.cs  Project.cs  ReferenceFileManager.cs  Script.cs  SelectionManager.cs  Solution.cs  VideoProperties.cs  VideoWrapper.cs  Workspace.cs
Wrappers/Pixelize/: CMakeLists.txt
Wrappers/Pixelize/include/: pixelize.hpp
Wrappers/Pixelize/src/: pixelize.cpp
(+741 files in other folders)
